log/build_2024-11-18_14-46-56/ros2_aruco/stderr.log
  File "/root/ros2_ws_diki_new/install/ros2_aruco/lib/python3.8/site-packages/ros2_aruco/aruco_node.py", line 136
    self.markers_pub.publish(markers)  *%
                                        ^
SyntaxError: invalid syntax

